[package]
name = "zip"
version = "0.7.0-alpha1"
authors = [
    "Marli Frost <marli@frost.red",
    "Mathijs van de Nes <git@mathijs.vd-nes.nl>"
]
license = "UNLICENSE"
repository = "https://github.com/mvdnes/zip-rs.git"
keywords = ["zip", "archive"]
description = """
A portable cross-platform archive format
"""
edition = "2018"

[dependencies]
